--- a/backend-py/requirements.txt
+++ b/backend-py/requirements.txt
@@ -1,113 +1,43 @@
-absl-py==2.2.1
-annotated-types==0.7.0
-anyio==4.9.0
-astunparse==1.6.3
-attrs==25.3.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-fastapi==0.115.12
-filelock==3.18.0
-filterpy==1.4.5
-flatbuffers==25.2.10
+# Core packages
 Flask==2.2.5
-fonttools==4.56.0
-fsspec==2025.3.0
-gast==0.6.0
 gunicorn==21.2.0
-google-pasta==0.2.0
-greenlet==3.1.1
-grpcio==1.71.0
-h11==0.14.0
-h5py==3.13.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.29.3
-idna==3.10
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.6
-keras==3.9.1
-kiwisolver==1.4.7
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mdurl==0.1.2
-mediapipe==0.10.21
-ml_dtypes==0.5.1
-mpmath==1.3.0
-namex==0.0.8
-networkx==3.2.1
-nodeenv==1.9.1
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-optree==0.14.1
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-prisma==0.15.0
-protobuf==4.25.6
-psutil==7.0.0
-psycopg2-binary==2.9.10
-py-cpuinfo==9.0.0
-pycparser==2.22
-pydantic==2.11.0
-pydantic_core==2.33.0
-Pygments==2.19.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-multipart==0.0.20
-pytesseract==0.3.10
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-safetensors==0.5.3
+pandas==2.2.3
+numpy==1.26.4
 scipy==1.15.2
+opencv-python==4.11.0.86
+pytesseract==0.3.10
+matplotlib==3.9.4
 seaborn==0.13.2
-sentencepiece==0.2.0
-setuptools==78.1.0
-six==1.17.0
-sniffio==1.3.1
-sounddevice==0.5.1
-SQLAlchemy==2.0.40
-starlette==0.46.1
-sympy==1.13.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-termcolor==2.5.0
-tokenizers==0.21.1
-tomlkit==0.13.2
-torch==2.6.0
-torchaudio==2.6.0
-torchvision==0.21.0
-tqdm==4.67.1
-transformers==4.50.2
-typing-inspection==0.4.0
-typing_extensions==4.13.0
-tzdata==2025.2
-ultralytics==8.3.97
-ultralytics-thop==2.0.14
-urllib3==2.3.0
-uvicorn==0.34.0
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.2
+pillow==11.1.0
 
-# DeepSORT tracking
+# ML / DL
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
+tensorflow==2.12.0
+keras==2.12.0
+
+# Tracking + Computer Vision
+mediapipe==0.10.21
 deep-sort-realtime==1.3.1
+ultralytics==8.3.97
 
-# SlowFast model (PyTorchVideo) from GitHub
-git+https://github.com/facebookresearch/pytorchvideo.git
+# Web & API
+fastapi==0.115.12
+uvicorn==0.34.0
+httpx==0.28.1
+starlette==0.46.1
 
+# Utility
+python-multipart==0.0.20
+requests==2.32.3
+tqdm==4.67.1
+
+# Optional: for transformers
+transformers==4.38.2
+huggingface-hub==0.29.3
+
+# Optional visualization & logging
+rich==13.9.4
+tensorboard==2.13.0
