--- a/backend-py/requirements.txt
+++ b/backend-py/requirements.txt
@@ -1,43 +1,44 @@
 # Core packages
-Flask==2.2.5
-gunicorn==21.2.0
-python-dotenv==1.1.0
-pandas==2.2.3
-numpy==1.26.4
-scipy==1.15.2
-opencv-python==4.11.0.86
-pytesseract==0.3.10
-matplotlib==3.9.4
-seaborn==0.13.2
-pillow==11.1.0
+Flask
+gunicorn
+python-dotenv
+pandas
+numpy
+scipy
+opencv-python
+pytesseract
+matplotlib
+seaborn
+pillow
 
 # ML / DL
-torch==2.1.0
-torchvision==0.16.0
-torchaudio==2.1.0
-tensorflow==2.12.0
-keras==2.12.0
+torch
+torchvision
+torchaudio
+tensorflow
+keras
 
 # Tracking + Computer Vision
-mediapipe==0.10.21
-deep-sort-realtime==1.3.1
-ultralytics==8.3.97
+mediapipe
+deep-sort-realtime
+ultralytics
 
 # Web & API
-fastapi==0.115.12
-uvicorn==0.34.0
-httpx==0.28.1
-starlette==0.46.1
+fastapi
+uvicorn
+httpx
+starlette
 
 # Utility
-python-multipart==0.0.20
-requests==2.32.3
-tqdm==4.67.1
+python-multipart
+requests
+tqdm
 
 # Optional: for transformers
-transformers==4.38.2
-huggingface-hub==0.29.3
+transformers
+huggingface-hub
 
 # Optional visualization & logging
-rich==13.9.4
-tensorboard==2.13.0
+rich
+tensorboard
+
