--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -24,6 +24,7 @@
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "form-data": "^4.0.2",
+    "googleapis": "^170.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
